documentacion/obtenida/ARINC 429/driver and software/PC708-1/API/P71W32NET.VB

    Public Declare Function PC708_DllUsageCount Lib "P71W32.DLL" Alias "_PC708_DllUsageCount@0" () As Int32
    Public Declare Function PC708_DspBioRd Lib "P71W32.DLL" Alias "_PC708_DspBioRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function PC708_DspIntfClear Lib "P71W32.DLL" Alias "_PC708_DspIntfClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_DspIntfRead Lib "P71W32.DLL" Alias "_PC708_DspIntfRead@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_DspIntmClear Lib "P71W32.DLL" Alias "_PC708_DspIntmClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_DspIntmSet Lib "P71W32.DLL" Alias "_PC708_DspIntmSet@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_DspXfClear Lib "P71W32.DLL" Alias "_PC708_DspXfClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_DspXfSet Lib "P71W32.DLL" Alias "_PC708_DspXfSet@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_ErrDesc Lib "P71W32.DLL" Alias "_PC708_ErrDesc@4" (ByVal errval As Int32) As UInt32
    Public Declare Function PC708_ErrDescStr Lib "P71W32.DLL" Alias "_PC708_ErrDescStr@4" (ByVal errval As Int32) As UInt32
    Public Declare Function PC708_ErrName Lib "P71W32.DLL" Alias "_PC708_ErrName@4" (ByVal errval As Int32) As UInt32
    Public Declare Function PC708_ErrorDefine Lib "P71W32.DLL" Alias "_PC708_ErrorDefine@12" (ByVal busb As Int32, ByVal intfreq As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_ExtDinRd Lib "P71W32.DLL" Alias "_PC708_ExtDinRd@4" (ByVal handleval As UInt32) As Int32
    Public Declare Sub PC708_ExtDinWr Lib "P71W32.DLL" Alias "_PC708_ExtDinWr@8" (ByVal dinval As Int32, ByVal handleval As UInt32)
    Public Declare Function PC708_ExtDoutRd Lib "P71W32.DLL" Alias "_PC708_ExtDoutRd@4" (ByVal handleval As UInt32) As Int32
    Public Declare Sub PC708_ExtDoutWr Lib "P71W32.DLL" Alias "_PC708_ExtDoutWr@8" (ByVal doutval As Int32, ByVal handleval As UInt32)
    Public Declare Sub PC708_FileClose Lib "P71W32.DLL" Alias "_PC708_FileClose@4" (ByVal handle As IntPtr)
    Public Declare Function PC708_FileErr Lib "P71W32.DLL" Alias "_PC708_FileErr@0" () As Int32
    Public Declare Sub PC708_FileErrClr Lib "P71W32.DLL" Alias "_PC708_FileErrClr@0" ()
    Public Declare Sub PC708_FileErrSet Lib "P71W32.DLL" Alias "_PC708_FileErrSet@0" ()
    Public Declare Function PC708_FileOpenRead Lib "P71W32.DLL" Alias "_PC708_FileOpenRead@4" (ByRef filename As String) As UInt32
    Public Declare Function PC708_FileOpenWrite Lib "P71W32.DLL" Alias "_PC708_FileOpenWrite@4" (ByRef filename As String) As UInt32
    Public Declare Function PC708_FileRead Lib "P71W32.DLL" Alias "_PC708_FileRead@12" (ByVal handle As IntPtr, ByVal buffer As IntPtr, ByVal count As UInt16) As Int32
    Public Declare Function PC708_FileSeek Lib "P71W32.DLL" Alias "_PC708_FileSeek@8" (ByVal handle As IntPtr, ByVal offset As UInt32) As Int32
    Public Declare Function PC708_FileTell Lib "P71W32.DLL" Alias "_PC708_FileTell@4" (ByVal handle As IntPtr) As UInt32
    Public Declare Function PC708_FileWrite Lib "P71W32.DLL" Alias "_PC708_FileWrite@12" (ByVal handle As IntPtr, ByVal buffer As IntPtr, ByVal count As UInt16) As Int32
    Public Declare Function PC708_GetHigh Lib "P71W32.DLL" Alias "_PC708_GetHigh@4" (ByVal val As UInt32) As UInt16
    Public Declare Function PC708_GetLow Lib "P71W32.DLL" Alias "_PC708_GetLow@4" (ByVal val As UInt32) As UInt16
    Public Declare Function PC708_GlobalRdW Lib "P71W32.DLL" Alias "_PC708_GlobalRdW@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub PC708_GlobalWrW Lib "P71W32.DLL" Alias "_PC708_GlobalWrW@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function PC708_HandleDel Lib "P71W32.DLL" Alias "_PC708_HandleDel@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_HandleGet Lib "P71W32.DLL" Alias "_PC708_HandleGet@24" (ByRef memval As UInt32, ByRef sizval As UInt32, ByRef ioval As UInt32, ByRef irqval As UInt16, ByRef drqval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_HandleGetIo Lib "P71W32.DLL" Alias "_PC708_HandleGetIo@4" (ByVal ioval As UInt16) As UInt32
    Public Declare Function PC708_HandleGetMem Lib "P71W32.DLL" Alias "_PC708_HandleGetMem@4" (ByVal memval As UInt32) As UInt32
    Public Declare Function PC708_HandleIns Lib "P71W32.DLL" Alias "_PC708_HandleIns@28" (ByRef cardname As String, ByVal memval As UInt32, ByVal ioval As UInt16, ByVal irqval As UInt16, ByVal drqval As UInt16, ByVal happwnd As IntPtr, ByVal uiremovalmsg As UInt16) As UInt32
    Public Declare Function PC708_HandleOkay Lib "P71W32.DLL" Alias "_PC708_HandleOkay@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_HeapAlloc Lib "P71W32.DLL" Alias "_PC708_HeapAlloc@8" (ByVal wordcount As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function PC708_HeapAllocAll Lib "P71W32.DLL" Alias "_PC708_HeapAllocAll@8" (ByRef wordcount As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function PC708_HeapAllocEx Lib "P71W32.DLL" Alias "_PC708_HeapAllocEx@12" (ByVal configval As UInt16, ByVal wordcount As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function PC708_HeapWipe Lib "P71W32.DLL" Alias "_PC708_HeapWipe@4" (ByVal handleval As UInt32) As UInt32
    Public Declare Function PC708_IndirectRd Lib "P71W32.DLL" Alias "_PC708_IndirectRd@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub PC708_IndirectWr Lib "P71W32.DLL" Alias "_PC708_IndirectWr@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function PC708_IntClear Lib "P71W32.DLL" Alias "_PC708_IntClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_IntConfig Lib "P71W32.DLL" Alias "_PC708_IntConfig@12" (ByVal configval As UInt32, ByVal count As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_IntDisable Lib "P71W32.DLL" Alias "_PC708_IntDisable@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_IntEnable Lib "P71W32.DLL" Alias "_PC708_IntEnable@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_IntEnableCond Lib "P71W32.DLL" Alias "_PC708_IntEnableCond@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_IntGet Lib "P71W32.DLL" Alias "_PC708_IntGet@4" (ByVal handleval As UInt32) As UInt32
    Public Declare Sub PC708_IntReset Lib "P71W32.DLL" Alias "_PC708_IntReset@4" (ByVal handleval As UInt32)
    Public Declare Function PC708_IORdW Lib "P71W32.DLL" Alias "_PC708_IORdW@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function PC708_IOWINRdW Lib "P71W32.DLL" Alias "_PC708_IOWINRdW@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub PC708_IOWINWrW Lib "P71W32.DLL" Alias "_PC708_IOWINWrW@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub PC708_IOWrW Lib "P71W32.DLL" Alias "_PC708_IOWrW@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function PC708_KernDev Lib "P71W32.DLL" Alias "_PC708_KernDev@8" (ByRef valueptr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_KernEnd Lib "P71W32.DLL" Alias "_PC708_KernEnd@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_KernIntClear Lib "P71W32.DLL" Alias "_PC708_KernIntClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_KernIntInstall Lib "P71W32.DLL" Alias "_PC708_KernIntInstall@8" (ByVal hevent As IntPtr, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_KernIntStatus Lib "P71W32.DLL" Alias "_PC708_KernIntStatus@8" (ByRef valueptr As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_KernIntUninstall Lib "P71W32.DLL" Alias "_PC708_KernIntUninstall@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_KernIORdW Lib "P71W32.DLL" Alias "_PC708_KernIORdW@12" (ByRef valueptr As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_KernIOWrW Lib "P71W32.DLL" Alias "_PC708_KernIOWrW@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_KernMEMFillW Lib "P71W32.DLL" Alias "_PC708_KernMEMFillW@16" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal countval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_KernMEMRdsW Lib "P71W32.DLL" Alias "_PC708_KernMEMRdsW@16" (ByRef bufptr As UInt16, ByVal addrval As UInt16, ByVal countval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_KernMEMRdW Lib "P71W32.DLL" Alias "_PC708_KernMEMRdW@12" (ByRef valueptr As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_KernMEMWrsW Lib "P71W32.DLL" Alias "_PC708_KernMEMWrsW@16" (ByRef bufptr As UInt16, ByVal addrval As UInt16, ByVal countval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_KernMEMWrW Lib "P71W32.DLL" Alias "_PC708_KernMEMWrW@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_KernStatus Lib "P71W32.DLL" Alias "_PC708_KernStatus@12" (ByRef valueptr As UInt32, ByVal typeval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_ListConfig Lib "P71W32.DLL" Alias "_PC708_ListConfig@12" (ByVal configval As UInt32, ByVal count As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function PC708_MakeLong Lib "P71W32.DLL" Alias "_PC708_MakeLong@8" (ByVal valh As UInt16, ByVal vall As UInt16) As UInt32
    Public Declare Function PC708_Mask Lib "P71W32.DLL" Alias "_PC708_Mask@8" (ByVal dataval As UInt32, ByVal cntval As UInt16) As UInt32
    Public Declare Function PC708_MEMWINRdB Lib "P71W32.DLL" Alias "_PC708_MEMWINRdB@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function PC708_MEMWINRdL Lib "P71W32.DLL" Alias "_PC708_MEMWINRdL@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function PC708_MEMWINRdW Lib "P71W32.DLL" Alias "_PC708_MEMWINRdW@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub PC708_MEMWINWrB Lib "P71W32.DLL" Alias "_PC708_MEMWINWrB@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub PC708_MEMWINWrL Lib "P71W32.DLL" Alias "_PC708_MEMWINWrL@12" (ByVal value As UInt32, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub PC708_MEMWINWrW Lib "P71W32.DLL" Alias "_PC708_MEMWINWrW@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Function PC708_Mod Lib "P71W32.DLL" Alias "_PC708_Mod@8" (ByVal moda As UInt32, ByVal modb As UInt32) As UInt32
    Public Declare Function PC708_ModeIsBC Lib "P71W32.DLL" Alias "_PC708_ModeIsBC@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_ModeIsMon Lib "P71W32.DLL" Alias "_PC708_ModeIsMon@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_ModeIsNotBC Lib "P71W32.DLL" Alias "_PC708_ModeIsNotBC@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_ModeIsNotMon Lib "P71W32.DLL" Alias "_PC708_ModeIsNotMon@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_ModeIsNotRT Lib "P71W32.DLL" Alias "_PC708_ModeIsNotRT@4" (ByVal handleval As UInt32) As Int32
